[gd_scene load_steps=17 format=3 uid="uid://dntc1afii58om"]

[ext_resource type="Texture2D" uid="uid://cesk07j3rye2c" path="res://assets/icons/quit.svg" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://bm7xlm1puksc1" path="res://scripts/main_menu.gd" id="1_rtw2f"]
[ext_resource type="Texture2D" uid="uid://c33qheafvgukk" path="res://assets/icons/play.svg" id="1_wu84c"]
[ext_resource type="Texture2D" uid="uid://b0k4usaltx40o" path="res://assets/icons/map.svg" id="2_8ln24"]
[ext_resource type="Texture2D" uid="uid://cwo2kyo0yfgtm" path="res://assets/icons/settings.svg" id="3_rtw2f"]
[ext_resource type="Texture2D" uid="uid://bg1fo7l7rkm8k" path="res://assets/MainMenuBackground.jpg" id="5_8ln24"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rtw2f"]
texture = ExtResource("5_8ln24")
expand_margin_bottom = 50.0
modulate_color = Color(0.65834, 0.65834, 0.6583398, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbmy8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0.5689727, 0.56897277, 0.5689727, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
bg_color = Color(0, 0.5171629, 0.03854166, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk1qb"]
bg_color = Color(0.20784314, 0.20784314, 0.20784314, 0.9254902)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dd4i"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgwnu"]
bg_color = Color(0.5689727, 0.56897277, 0.5689727, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_flqon"]
bg_color = Color(0.5689727, 0.56897277, 0.5689727, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rcqid"]
bg_color = Color(0, 0.5171629, 0.03854166, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtw2f")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rtw2f")

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -26.0
offset_right = 105.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CurrentMapLabel" type="Label" parent="MenuButtons"]
layout_mode = 2
text = "Current Level: Tutorial"
horizontal_alignment = 1

[node name="Start" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/focus = SubResource("StyleBoxFlat_oa1go")
text = "Start Game"
icon = ExtResource("1_wu84c")

[node name="ChooseMap" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/focus = SubResource("StyleBoxFlat_oa1go")
text = "Choose Map"
icon = ExtResource("2_8ln24")

[node name="Options" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/focus = SubResource("StyleBoxFlat_oa1go")
text = "Options"
icon = ExtResource("3_rtw2f")

[node name="Quit" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/focus = SubResource("StyleBoxFlat_oa1go")
text = "Quit"
icon = ExtResource("1_l6cm7")

[node name="ChooseMapMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -20.0
offset_right = 160.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jk1qb")

[node name="Description" type="Label" parent="ChooseMapMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -83.0
offset_right = 104.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
text = "Choose which map to play"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MapOptions" type="OptionButton" parent="ChooseMapMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -35.0
offset_right = 96.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectMap" type="Button" parent="ChooseMapMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = 39.0
offset_right = 61.5
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_5dd4i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lgwnu")
theme_override_styles/hover = SubResource("StyleBoxFlat_flqon")
theme_override_styles/focus = SubResource("StyleBoxFlat_rcqid")
text = "Select"

[connection signal="pressed" from="MenuButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuButtons/ChooseMap" to="." method="_on_choose_map_pressed"]
[connection signal="pressed" from="MenuButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ChooseMapMenu/SelectMap" to="." method="_on_select_map_pressed"]
